--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,3 +3,11 @@ services:
         build: ./healthcheck
         volumes:
             - ./healthcheck.json:/checker/config.json
+### to customize the healthcheck config ###
+        # healthcheck:
+        #     test: ["CMD", "python3", "check.py"]
+        #     interval: 60s
+        #     timeout: 20s
+        #     start_period: 60s
+        #     retries: 5
+###  ###
